[GSCOLLECT-1505] Create JMH tests for sumOf and sumBy.
git-svn-id: svn+ssh://gscollections.svn.services.gs.com/svnroot/gscollections-svn/trunk@790 d5c9223b-1aff-41ac-aadd-f810b4a99ac4